--- a/gleam.toml
+++ b/gleam.toml
@@ -21,6 +21,7 @@ gtfs_rt_nyct = ">= 0.1.0 and < 1.0.0"
 gleam_httpc = ">= 5.0.0 and < 6.0.0"
 protobin = ">= 2.0.0 and < 3.0.0"
 gleam_http = ">= 4.3.0 and < 5.0.0"
+gleam_time = ">= 1.4.0 and < 2.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
