--- a/gleam.toml
+++ b/gleam.toml
@@ -24,6 +24,7 @@ gleam_http = ">= 4.3.0 and < 5.0.0"
 gleam_time = ">= 1.4.0 and < 2.0.0"
 lustre = ">= 5.3.5 and < 6.0.0"
 gsv = ">= 5.0.0 and < 6.0.0"
+simplifile = ">= 2.3.0 and < 3.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
