--- a/gleam.toml
+++ b/gleam.toml
@@ -25,6 +25,8 @@ gleam_time = ">= 1.4.0 and < 2.0.0"
 lustre = ">= 5.3.5 and < 6.0.0"
 gsv = ">= 5.0.0 and < 6.0.0"
 simplifile = ">= 2.3.0 and < 3.0.0"
+repeatedly = ">= 2.1.2 and < 3.0.0"
+gleam_otp = ">= 1.2.0 and < 2.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
