--- a/server/gleam.toml
+++ b/server/gleam.toml
@@ -13,6 +13,8 @@ version = "1.0.0"
 # https://gleam.run/writing-gleam/gleam-toml/.
 
 [dependencies]
+shared = { path = "../shared" }
+
 gleam_stdlib = ">= 0.44.0 and < 2.0.0"
 wisp = ">= 2.0.0 and < 3.0.0"
 gleam_erlang = ">= 1.3.0 and < 2.0.0"
