--- a/gtfs/gleam.toml
+++ b/gtfs/gleam.toml
@@ -1,4 +1,4 @@
-name = "shared"
+name = "gtfs"
 version = "1.0.0"
 
 # Fill out these fields if you intend to generate HTML documentation or publish
@@ -13,11 +13,15 @@ version = "1.0.0"
 # https://gleam.run/writing-gleam/gleam-toml/.
 
 [dependencies]
-gtfs = { path = "../gtfs" }
-
 gleam_stdlib = ">= 0.44.0 and < 2.0.0"
-lustre = ">= 5.5.2 and < 6.0.0"
+gleam_erlang = ">= 1.3.0 and < 2.0.0"
+gleam_httpc = ">= 5.0.0 and < 6.0.0"
+gleam_http = ">= 4.3.0 and < 5.0.0"
+protobin = ">= 2.0.0 and < 3.0.0"
 gleam_time = ">= 1.7.0 and < 2.0.0"
+gtfs_rt_nyct = ">= 0.2.0 and < 1.0.0"
+simplifile = ">= 2.3.2 and < 3.0.0"
+gsv = ">= 5.0.0 and < 6.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
