--- a/server/gleam.toml
+++ b/server/gleam.toml
@@ -14,6 +14,7 @@ version = "1.0.0"
 
 [dependencies]
 shared = { path = "../shared" }
+gtfs = { path = "../gtfs" }
 
 gleam_stdlib = ">= 0.44.0 and < 2.0.0"
 wisp = ">= 2.0.0 and < 3.0.0"
