--- a/client/gleam.toml
+++ b/client/gleam.toml
@@ -18,6 +18,9 @@ shared = { path = "../shared" }
 
 gleam_stdlib = ">= 0.44.0 and < 2.0.0"
 lustre = ">= 5.5.2 and < 6.0.0"
+gleam_json = ">= 3.1.0 and < 4.0.0"
+plinth = ">= 0.9.2 and < 1.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
+lustre_dev_tools = ">= 2.3.4 and < 3.0.0"
