--- a/server/gleam.toml
+++ b/server/gleam.toml
@@ -31,6 +31,7 @@ gsv = ">= 5.0.0 and < 6.0.0"
 simplifile = ">= 2.3.0 and < 3.0.0"
 repeatedly = ">= 2.1.2 and < 3.0.0"
 gleam_otp = ">= 1.2.0 and < 2.0.0"
+gleam_json = ">= 3.1.0 and < 4.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
