--- a/shared/gleam.toml
+++ b/shared/gleam.toml
@@ -18,6 +18,7 @@ gtfs = { path = "../gtfs" }
 gleam_stdlib = ">= 0.44.0 and < 2.0.0"
 lustre = ">= 5.5.2 and < 6.0.0"
 gleam_time = ">= 1.7.0 and < 2.0.0"
+gleam_json = ">= 3.1.0 and < 4.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
