--- a/client/gleam.toml
+++ b/client/gleam.toml
@@ -24,3 +24,7 @@ plinth = ">= 0.9.2 and < 1.0.0"
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
 lustre_dev_tools = ">= 2.3.4 and < 3.0.0"
+
+[tools.lustre.build]
+outdir = "../server/priv/"
+no_html = true
