--- a/shared/gleam.toml
+++ b/shared/gleam.toml
@@ -19,6 +19,7 @@ gleam_stdlib = ">= 0.44.0 and < 2.0.0"
 lustre = ">= 5.5.2 and < 6.0.0"
 gleam_time = ">= 1.7.0 and < 2.0.0"
 gleam_json = ">= 3.1.0 and < 4.0.0"
+lustre_event_source = { git = "https://github.com/gavinmorrow/lustre_event_source", ref = "41c12a3200ce" }
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
