--- a/client/gleam.toml
+++ b/client/gleam.toml
@@ -21,6 +21,7 @@ lustre = ">= 5.5.2 and < 6.0.0"
 gleam_json = ">= 3.1.0 and < 4.0.0"
 plinth = ">= 0.9.2 and < 1.0.0"
 lustre_event_source = { git = "https://github.com/gavinmorrow/lustre_event_source", ref = "e430a97a86e4" }
+gleam_time = ">= 1.7.0 and < 2.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
