--- a/shared/gleam.toml
+++ b/shared/gleam.toml
@@ -20,6 +20,7 @@ lustre = ">= 5.5.2 and < 6.0.0"
 gleam_time = ">= 1.7.0 and < 2.0.0"
 gleam_json = ">= 3.1.0 and < 4.0.0"
 lustre_event_source = { git = "https://github.com/gavinmorrow/lustre_event_source", ref = "e430a97a86e4" }
+gleam_community_maths = ">= 2.0.0 and < 3.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
