--- a/server/gleam.toml
+++ b/server/gleam.toml
@@ -32,6 +32,7 @@ simplifile = ">= 2.3.0 and < 3.0.0"
 repeatedly = ">= 2.1.2 and < 3.0.0"
 gleam_otp = ">= 1.2.0 and < 2.0.0"
 gleam_json = ">= 3.1.0 and < 4.0.0"
+tzif = ">= 1.1.2 and < 2.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
