--- a/server/gleam.toml
+++ b/server/gleam.toml
@@ -33,6 +33,7 @@ repeatedly = ">= 2.1.2 and < 3.0.0"
 gleam_otp = ">= 1.2.0 and < 2.0.0"
 gleam_json = ">= 3.1.0 and < 4.0.0"
 tzif = ">= 1.1.2 and < 2.0.0"
+booklet = ">= 1.1.0 and < 2.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
